FILE(GLOB_RECURSE TESTS_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.c)
SET (TO_DEL_CPP_LIST
	stub.cpp
)
list(REMOVE_ITEM TESTS_SOURCES ${TO_DEL_CPP_LIST})


SET(TESTS_TARGET _${TESTS_BINARY})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

ADD_EXECUTABLE(${TESTS_TARGET} ${TESTS_SOURCES})

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

TARGET_LINK_LIBRARIES(${TESTS_TARGET} ${PROJECT_NAME} boost_log boost_log_setup boost_system boost_thread )

SET_TARGET_PROPERTIES(${TESTS_TARGET} PROPERTIES OUTPUT_NAME ${TESTS_BINARY})

ADD_DEFINITIONS(-DTEST)
